auth viewa and functionalities

--- a/views/pages/home/index.ejs
+++ b/views/pages/home/index.ejs
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+  <%- include("../../partials/_head") %>
   <body>
-    <div>
-      <% data.forEach((val) => { %>
-      <div><%= val %></div>
-      <% }) %>
-    </div>
+    <div>home</div>
+    <a href="/auth/sign-out"><button>logout</button></a>
   </body>
 </html>
