--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,4 +1,4 @@
 <div class="footer">
   &copy; e-club&nbsp;<span id="footer-date"></span>, All rights reserved.
 </div>
-<script type="text/javascript" src="scripts/index.js"></script>
+<script type="text/javascript" src="/scripts/index.js"></script>
