--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -2,3 +2,4 @@
   &copy; e-club&nbsp;<span id="footer-date"></span>, All rights reserved.
 </div>
 <script type="text/javascript" src="/scripts/index.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
