--- a/views/pages/profile/index.ejs
+++ b/views/pages/profile/index.ejs
@@ -6,7 +6,7 @@
     <div class="wrapper">
       <h2 class="profile-header">My Clubs</h2>
       <% if(data.length === 0){%>
-      <p>you have not created any club</p>
+      <p class="empty">you have not created any club</p>
       <%}else{%>
       <div class="grid-wrapper">
         <% data.forEach((club) => {%>
