--- a/views/partials/_navBar.ejs
+++ b/views/partials/_navBar.ejs
@@ -7,7 +7,7 @@
       <a href="/">Home</a>
     </li>
     <li>
-      <a href="/activity">Activity</a>
+      <a href="/member-club">Joined</a>
     </li>
     <li>
       <a href="/create-club">Create club</a>
