--- a/views/partials/_navBar.ejs
+++ b/views/partials/_navBar.ejs
@@ -7,6 +7,9 @@
       <a href="/">Home</a>
     </li>
     <li>
+      <a href="/club-invites">Invites</a>
+    </li>
+    <li>
       <a href="/member-club">Joined</a>
     </li>
     <li>
