--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -315,7 +315,12 @@ a.delete {
   display: flex;
   align-items: center;
   gap: 5px;
+  width: 100%;
   margin-top: 20px;
+}
+
+.club-actions form {
+  flex: 1;
 }
 
 .invite-accept {
@@ -335,6 +340,7 @@ a.delete {
   background-color: #b42525;
   color: #fff;
   cursor: pointer;
+  width: 100%;
 }
 /*invite view end*/
 
