--- a/views/pages/profile/club.ejs
+++ b/views/pages/profile/club.ejs
@@ -29,7 +29,7 @@
                   <th>id</th>
                   <th>name</th>
                   <th>email</th>
-                  <th>joined</th>
+                  <!-- <th>joined</th> -->
                   <th>action</th>
                 </tr>
               </thead>
