--- a/views/partials/_navBar.ejs
+++ b/views/partials/_navBar.ejs
@@ -2,6 +2,7 @@
   <div class="logo">
     <span>E-Club</span>
   </div>
+  <div class="menu">&equiv;</div>
   <ul class="nav-links">
     <li>
       <a href="/">Home</a>
@@ -19,4 +20,26 @@
       <a href="/auth/sign-out">Sign out</a>
     </li>
   </ul>
+</div>
+
+<div class="sidebar-overlay">
+  <div class="sidebar">
+    <ul class="sidebar-links">
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/club-invites">Invites</a>
+      </li>
+      <li>
+        <a href="/member-club">Joined</a>
+      </li>
+      <li>
+        <a href="/create-club">Create club</a>
+      </li>
+      <li>
+        <a href="/auth/sign-out">Sign out</a>
+      </li>
+    </ul>
+  </div>
 </div>
