--- a/views/pages/profile/club.ejs
+++ b/views/pages/profile/club.ejs
@@ -41,7 +41,7 @@
                     <%= [member.first_name, member.last_name].join(' ') %>
                   </td>
                   <td><%= member.email %></td>
-                  <!-- <td><%= member.date_joined %></td> -->
+                  <!-- <td><%= member.created_at %></td> -->
                   <td>
                     <form
                       class="delete"
@@ -72,12 +72,58 @@
           </div>
           <div class="tab-three">
             <div class="chart-container">
-              <canvas id="myChart" width="400" height="auto"></canvas>
+              <canvas id="myChart" width="auto" height="auto"></canvas>
             </div>
           </div>
         </div>
       </div>
     </div>
     <%- include("../../partials/_footer") %>
+    <script>
+      const myLabel = [];
+      const myData = [];
+      const member_data = `<%- JSON.stringify(members) %>`;
+      JSON.parse(member_data).forEach((data) => {
+        myLabel.push(data.email);
+        myData.push(data.activity);
+      });
+      const ctx = document.getElementById("myChart").getContext("2d");
+      const myChart = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: myLabel,
+          datasets: [
+            {
+              label: "activity log",
+              data: myData,
+              backgroundColor: [
+                "rgba(255, 99, 132, 0.2)",
+                "rgba(54, 162, 235, 0.2)",
+                "rgba(255, 206, 86, 0.2)",
+                "rgba(75, 192, 192, 0.2)",
+                "rgba(153, 102, 255, 0.2)",
+                "rgba(255, 159, 64, 0.2)",
+              ],
+              borderColor: [
+                "rgba(255, 99, 132, 1)",
+                "rgba(54, 162, 235, 1)",
+                "rgba(255, 206, 86, 1)",
+                "rgba(75, 192, 192, 1)",
+                "rgba(153, 102, 255, 1)",
+                "rgba(255, 159, 64, 1)",
+              ],
+              borderWidth: 1,
+            },
+          ],
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true,
+            },
+          },
+        },
+      });
+    </script>
   </body>
 </html>
